# evermind

./: CMakeLists.txt  README.md
evermind/: main.cpp
